<resources>
    <string name="app_name">SimpleApp</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register Here!</string>
    <string name="have_an_account_login_here">Have an account? Login here</string>
    <string name="you_are_login">You are Login!</string>
    <string name="logout">Logout</string>
    <string name="add_new_event">Add New Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="submit">Submit</string>
    <string name="edit_data">Edit Data</string>
    <string name="update_button">Update</string>
    <string name="update_event">Update Event</string>
    <string name="image_url">Image URL</string>
</resources>