<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350sp"
    android:layout_height="200sp"
    android:background="@drawable/background_shadow"
    android:layout_marginBottom="10sp">

    <TextView
        android:id="@+id/event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15sp"
        android:text="@string/app_name"
        android:fontFamily="monospace"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/event_description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_description"
        android:text="@string/add_new_event"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/event_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/event_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_event_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@android:drawable/ic_delete"
            android:contentDescription="@string/app_name"
            android:layout_margin="10sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:text="@string/edit_data"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>